--- a/x3rt.DiscordOAuth2.csproj
+++ b/x3rt.DiscordOAuth2.csproj
@@ -7,14 +7,23 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>DiscordOAuth2</Title>
         <Authors>x3rt</Authors>
-        <Description>Discord OAuth2 implementation for C# </Description>
+        <Description>Discord OAuth2 implementation for C#</Description>
         <AssemblyName>x3rt.DiscordOAuth2</AssemblyName>
         <RootNamespace>x3rt.DiscordOAuth2</RootNamespace>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <RepositoryUrl>https://github.com/x3rt/x3rt.DiscordOAuth2</RepositoryUrl>
+        <RepositoryType>GIT</RepositoryType>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="" />
+        <None Include="LICENSE" Pack="true" PackagePath="" />
     </ItemGroup>
 
 </Project>
