--- a/x3rt.DiscordOAuth2.csproj
+++ b/x3rt.DiscordOAuth2.csproj
@@ -14,6 +14,7 @@
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <RepositoryUrl>https://github.com/x3rt/x3rt.DiscordOAuth2</RepositoryUrl>
         <RepositoryType>GIT</RepositoryType>
+        <Version>1.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
